# esp32-starter-kit

./: .clang-format  .gitignore  CMakeLists.txt  README.md  version.txt
main/: CMakeLists.txt  esp_start_kit_main.c  hello_world_main.c  idf_component.yml
main/components/bus/: bus.c  bus.h
main/components/bus/handlers/: fire_handler.c  handlers.h  ir_handler.c  ldr_handler.c  motion_handler.c  print_handler.c  rain_handler.c  ultra_handler.c  wifi_handler.c
main/components/button/: button.c  button.h
main/components/button/handlers/: handler.h  led_handler.c
main/components/cfg/: .gitignore  configure.h
main/components/dnsm/: dnsm.c  dnsm.h
main/components/fire/: fire.c  fire.h
main/components/http/client/: h_client.c  h_client.h
main/components/icons/: icons.c  icons.h
main/components/ir/: ir.c  ir.h
main/components/ldr/: ldr.c  ldr.h
main/components/led/: leds.c  leds.h
main/components/led_pwm/: leds.c  leds.h
main/components/motion/: motion.c  motion.h
main/components/nvs/: nvs.c  nvs.h
main/components/oled/: oled.c  oled.h
main/components/pb/: pb.c  pb.h
main/components/rain/: rain.c  rain.h
main/components/sntp/: sntp.c  sntp.h
main/components/temp/: temp.c  temp.h
main/components/ultra/: ultra.c  ultra.h
main/components/wifi/: wifi.c  wifi.h
main/services/adc/: adc.c  adc.h
main/services/move_avg/: move_avg.c  move_avg.h
scripts/: bump_version.py
